# conway_sdl

./: CMakeLists.txt  Makefile  README.md  cellmap.cpp  cellmap.h  main.cpp  test.cpp
examples/: angle.json  gosper_glider_gun.json  gosper_glider_gun.txt  oscillator1.json  pulsar.json
include/win/SDL2/: SDL_config.h  SDL_revision.h
lib/: libSDL2-2.0.0.dylib  libjson.pc  libjson.so.1.0.0
lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
lib/win/: SDL2.lib  SDL2main.lib
